# mtjp9-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mtjp9-rs-auth0-client/: .env.sample  CHANGELOG.md  Cargo.toml  README.md
crates/mtjp9-rs-auth0-client/src/: dbconnections.rs  domain.rs  error.rs  lib.rs  oauth.rs  organizations.rs  tickets.rs  token.rs  users.rs
crates/mtjp9-rs-auth0-client/src/dbconnections/: change_password.rs
crates/mtjp9-rs-auth0-client/src/oauth/: get_oauth_token.rs
crates/mtjp9-rs-auth0-client/src/organizations/: create_organization.rs  patch_organization.rs  post_members.rs
crates/mtjp9-rs-auth0-client/src/tickets/: post_password_change.rs
crates/mtjp9-rs-auth0-client/src/users/: create_user.rs
tools/: README.md
tools/docker-compose/: compose.yaml  databases.yaml
tools/dynamodb-setup/: Dockerfile  create-s3.sh  create-tables.sh  dynamodb-streams.sh  kinesis-data-streams.sh
